UnknownProxyK8S/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blazor-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blazor
  template:
    metadata:
      labels:
        app: blazor
    spec:
      containers:
      - name: blazor
        image: myblazorapp:localkb
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        - containerPort: 8081
