UnknownProxyK8S/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blazor-service
spec:
  selector:
    app: blazor
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
